# Data-Analyser-Agent

./: .gitignore  README.md  Streamlit_app.py  main.py  pyproject.toml  requirements.txt
Agents/: CodeExecutorAgent.py  DataAnalyserAgent.py
Agents/prompts/: DataAnalyzerPrompt.py
Config/: Constants.py  Docker_utils.py  dataset_read.py  openai_model_client.py
Teams/: AnalyserGptTeam.py
